Bug Fix: login page broken on logout

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -81,7 +81,7 @@
     text-align: center;
     color: #fff;
     font-size: 12px;
-    padding: 20px 10px 10px;
+    padding: 60px 10px 10px;
     a { color: #5fbbc4; cursor: pointer; }
   }
 
